# yggdrasil

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  NOTICE  README.md  SECURITY.md  mkconfig.sh  mkdocs.yml  ygg.example.toml  ygg.legacy-infra.example.toml
.github/workflows/: maker-release.yml  shell-checks.yml
apps/yggdrasil-maker/: Cargo.toml
apps/yggdrasil-maker/src/: gui.rs  main.rs
assets/ssh/: README.md
config/: bootstrap
config/bootloaders/grub-pc/: grub.cfg
config/hooks/normal/: 9100-set-root.hook.chroot  9102-set-zpool-import.hook.chroot  9103-set-networking.hook.chroot  9104-set-lxc-path.hook.chroot  9105-set-lxc-autostart.hook.chroot  9106-boot-telemetry.hook.chroot  9106-unprivileged-lxc-setup.hook.chroot  9107-ensure-infisical.hook.chroot  9107-sshd-permitrootlogin.hook.chroot  9108-setup-nas-users.hook.chroot  9109-apcupsd.hook.chroot  9151-nvidia-setup.hook.chroot  9152-nvidia-container-toolkit.hook.chroot  9191-configure-intel-arc-sriov.hook.chroot  9198-sign-dkms-modules.hook.chroot  9200-kde.hook.chroot  9201-set-users.hook.chroot
config/includes.chroot/etc/apt/apt.conf.d/: 02proxy
config/includes.chroot/etc/live/config.conf.d/: ssh-hostkeys.conf
config/includes.chroot_before_packages/etc/apt/apt.conf.d/: 02proxy  03cache-tuning  99ygg-zfs-dkms.conf
config/includes.chroot_before_packages/opt/ygg/: patch-zfs-dkms.sh
config/package-lists/: firmware.list.chroot  ygg.list.chroot
crates/maker-app/: Cargo.toml
crates/maker-app/src/: lib.rs
crates/maker-build/: Cargo.toml
crates/maker-build/src/: lib.rs
crates/maker-copy/: Cargo.toml
crates/maker-model/: Cargo.toml
crates/maker-model/src/: lib.rs
docker/: yggdrasil-maker-build.Dockerfile
docs/: architecture.md  build-release.md  github-publish.md  index.md  intel-arc-sriov-live-host.md  migration.md  release-checklist.md  requirements.txt  smoke-tests.md  tui.md  yggdrasil-maker-distribution.md  yggdrasil-maker-product-philosophy.md  yggui-shared-contract-opinion-from-yggterm.md
docs/wiki/: index.md
scripts/: build-maker-image.sh  build-profile.sh  install.ps1  install.sh  maker-build-container-entrypoint.sh  manual-maker-observe.sh  mkconfig-core.sh  mkconfig-legacy.sh  mkconfig-tui.sh  package-maker-platform-release.sh  package-maker-release-manifest.sh  prune-isos.sh  render-maker-icon-assets.sh  setup-github-remote.sh  toml-to-env.sh
templates/: user-config.env.example
tests/install/: direct-install-smoke.sh
tests/smoke/: boot-qemu.sh  iso-rootfs-check.sh  maker-input-latency.sh  maker-startup-latency.sh  maker-window-regressions.sh  run.sh
yggdrasil-maker/: Cargo.toml
yggdrasil-maker/apps/yggdrasil-maker/: Cargo.toml
yggdrasil-maker/apps/yggdrasil-maker/src/: app_capture.rs  app_control.rs  build_job.rs  gui.rs  linux_desktop.rs  main.rs  window_icon.rs
yggdrasil-maker/crates/maker-app/src/: lib.rs
yggdrasil-maker/crates/maker-build/src/: lib.rs
yggdrasil-maker/crates/maker-copy/src/: lib.rs
yggdrasil-maker/crates/maker-model/src/: lib.rs
