[workspace]
members = [
  "apps/yggdrasil-maker",
  "crates/maker-app",
  "crates/maker-build",
  "crates/maker-copy",
  "crates/maker-model",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Yggdrasil HQ"]
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["local-offset"] }
toml = "0.8"

[patch.crates-io]
dioxus-desktop = { path = "../../yggterm/vendor/dioxus-desktop" }
dioxus-interpreter-js = { path = "../../yggterm/vendor/dioxus-interpreter-js" }
