[package]
name = "yggdrasil-maker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "yggdrasil-maker"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
maker-build = { path = "../../crates/maker-build" }
maker-copy = { path = "../../crates/maker-copy" }
maker-model = { path = "../../crates/maker-model" }
serde_json.workspace = true
