[package]
name = "yggdrasil-maker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
desktop-ui = [
  "dep:dioxus",
  "dep:dioxus-desktop",
  "dep:keyboard-types",
  "dep:once_cell",
  "dep:png",
  "dep:tao",
  "dep:tokio",
  "dep:wry",
  "dep:yggterm-core",
  "dep:yggterm-platform",
  "dep:yggui-contract",
  "dep:yggui",
]

[[bin]]
name = "yggdrasil-maker"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
maker-app = { path = "../../crates/maker-app" }
maker-build = { path = "../../crates/maker-build" }
maker-copy = { path = "../../crates/maker-copy" }
maker-model = { path = "../../crates/maker-model" }
dioxus = { version = "=0.7.3", features = ["desktop"], optional = true }
dioxus-desktop = { version = "=0.7.3", optional = true }
keyboard-types = { version = "0.7", optional = true }
once_cell = { version = "1", optional = true }
png = { version = "0.17", optional = true }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tao = { version = "0.34.6", optional = true }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"], optional = true }
wry = { version = "0.53.5", optional = true }
yggterm-core = { path = "../../../../yggterm/crates/yggterm-core", optional = true }
yggterm-platform = { path = "../../../../yggterm/crates/yggterm-platform", optional = true }
yggui-contract = { path = "../../../../yggterm/crates/yggui-contract", optional = true }
yggui = { path = "../../../../yggterm/crates/yggui", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
cairo-rs = { version = "0.18.5", features = ["png"] }
gdk-pixbuf = { version = "0.18" }
gtk = { version = "0.18" }
webkit2gtk = { version = "=2.0.1", features = ["v2_38"] }
